Fix issue with button display on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,13 +233,12 @@ main {
     /*centering the Vamos-button using flexbox*/
     align-self: center;
     border: 1px solid rgb(18, 128, 223);
-    border-radius: 2px;
+    border-radius: 3px;
     padding: 0.5rem 1rem;
-    font-size: 100%;
-    /*font-weight: bold;*/
+    /*font-size: 100%;
+    font-weight: bold;*/
     box-shadow: 0 0 3px rgb(18, 128, 223);
     background-color: white;
-    color: black;
 }
 
 /* Gallery page */
